# yureader_firmware

./: .clang-format  .clangd  .gitignore  README.md  bdf2yfnt.py
app/: CMakeLists.txt  flash.sh  prj.conf  west.yml
app/boards/ellie/yureader/: Kconfig.yureader  board.cmake  board.yml  yureader-pinctrl.dtsi  yureader_nrf54l15_cpuapp.defconfig  yureader_nrf54l15_cpuapp.dts  yureader_nrf54l15_cpuapp.yml
app/drivers/: CMakeLists.txt  Kconfig
app/drivers/charger/: CMakeLists.txt  Kconfig  Kconfig.bq25628e  charger_bq25628e.c
app/dts/bindings/charger/: ti,bq25628e.yaml
app/include/fonts/: spleen.h
app/src/: build.zig  font.c  main.c  terminus.c
app/src/bindings/: buttons.c  display.c  display_desktop_shim.c  sd.c  zephyr.c
app/src/zig/: desktop_demo.zig  font.zig  gfx.zig  logger.zig  main.zig  rbk2.zig  renderer.zig  zephyr.zig
app/src/zig/compression/: lz4.zig
app/src/zig/hardware/: buttons.zig  display.zig  display_desktop_impl.zig  sd.zig
app/src/zig/util/: Matrix3.zig
rbk2/: convert.py  rbk2_render.py  rbs2.py
